fixing the feedback more and making it dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { padding: 10px; margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  padding: 10px;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  color: white;
+  background-color: #2e2d2c;
+}
